# GeorgeBot

./: .gitignore  .gitmodules  README.md  SLAM_using_3_D_Lidar_Point_Clouds.mlx  exampleHelperVisualizeMapAndPoseGraph.m
launch/: georgebot_launch.py
maps/: map-0.pgm  map-0.yaml  map-1.yaml  map-10.pgm  map-10.yaml  map-11.pgm  map-11.yaml  map-12.pgm  map-12.yaml  map-13.pgm  map-13.yaml  map-14.pgm  map-14.yaml  map-15.pgm  map-15.yaml  map-16.yaml  map-17.pgm  map-17.yaml  map-18.pgm  map-18.yaml  map-19.pgm  map-19.yaml  map-2.pgm  map-2.yaml  map-20.pgm  map-20.yaml  map-21.pgm  map-21.yaml  map-22.yaml  map-23.yaml  map-24.pgm  map-24.yaml  map-25.pgm  map-25.yaml  map-26.pgm  map-26.yaml  map-27.pgm  map-27.yaml  map-28.pgm  map-28.yaml  (+48 more)
rosbag2_2023_04_21-22_15_34/: metadata.yaml  rosbag2_2023_04_21-22_15_34_0.db3
scripts/: deploy  receive
src/Miscellaneous/my_package/: package.xml  setup.py
src/Miscellaneous/py_pubsub/: package.xml  setup.py
src/Miscellaneous/py_srvcli/: package.xml  setup.py
src/arduino_serial/: package.xml  setup.cfg  setup.py
src/arduino_serial/arduino_serial/: arduino_serial.py
src/arduino_serial/launch/: arduino_serial.launch.py
src/aws/: package.xml  setup.cfg  setup.py
src/aws/aws/: aws.py
src/aws_client/: package.xml  setup.cfg  setup.py
src/aws_client/aws_client/: aws_client.py
src/aws_client/launch/: AWS_Client.launch.py  AWS_client.launch.py
src/chassis_frame/: package.xml  setup.cfg  setup.py
src/chassis_frame/chassis_frame/: chassis_frame.py
src/controller_input/: package.xml  setup.cfg  setup.py
src/controller_input/controller_input/: controller_input.py
src/controller_input/launch/: controller_input.launch.py
src/controller_interface/: CMakeLists.txt  package.xml
src/controller_interface/msg/: ControllerFrame.msg
src/georgebot_launch/: package.xml  setup.cfg  setup.py
src/georgebot_launch/config/: mapper_params_lifelong.yaml
src/georgebot_launch/launch/: cyglidar_georgebot.launch.py  georgebot.launch.py  georgebot_offline.launch.py  georgebot_pc2_to_laser.launch.py  georgebot_record.launch.py  georgebot_slam.launch.py
src/georgebot_msgs/: CMakeLists.txt  package.xml
src/georgebot_msgs/msg/: Direction.msg  IMUData.msg
src/georgebot_msgs/srv/: ControllerQuery.srv
src/lidar_filter/: CMakeLists.txt  package.xml
src/lidar_filter/src/: lidar_filter.cpp
src/lidar_json/: package.xml  setup.cfg  setup.py
src/lidar_json/lidar_json/: lidar_json.py
src/lidar_packager/: CMakeLists.txt  package.xml
src/lidar_packager/src/: lidar_drawer.hpp  lidar_packager.cpp  lidarpoint.hpp
src/lidar_repub/: package.xml  setup.cfg  setup.py
src/lidar_repub/lidar_repub/: lidar_repub.py
src/limit_switch/: package.xml  setup.cfg  setup.py
src/limit_switch/limit_switch/: getSwitch.py  switch_publisher.py
src/odometry/: package.xml  setup.py
src/odometry/launch/: odometry.launch.py
src/odometry/odometry/: odometry.py
src/py_srvcli/: package.xml  setup.py
src/py_srvcli/py_srvcli/: controller_service.py
src/subscriber/: package.xml
src/teleop_movement_control/: package.xml  setup.cfg  setup.py
subscriber/: setup.cfg  setup.py
(+3 files in other folders)
